--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -803,6 +803,7 @@ a.status__content__spoiler-link {
   position: relative;
   box-sizing: border-box;
   display: flex;
+  flex: 1 1 0;
   flex-direction: column;
 
   > .scrollable {
@@ -876,7 +877,6 @@ a.status__content__spoiler-link {
   }
 
   .column, .drawer {
-    flex: 0 0 auto;
     padding: 10px;
     padding-left: 5px;
     padding-right: 5px;
@@ -888,19 +888,6 @@ a.status__content__spoiler-link {
     &:last-child {
       padding-right: 10px;
     }
-  }
-}
-
-@media screen and (min-width: 2560px) {
-  .columns-area {
-    justify-content: center;
-  }
-
-  .column, .drawer {
-    width: 350px;
-    border-radius: 4px;
-    height: 90vh;
-    margin-top: 5vh;
   }
 }
 
